data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_708.wast
;; 9. **Test for Passing Values through `call` Wrapped in `nop`**:    - **Description**: Make a function call wrapped around `nop` instructions and verify the operand types before and after the call.    - **Constraint Checked**: Ensures function calling conventions are consistent with stack type expectations.    - **Relation**: Tests if `nop` causes hidden side effects that affect operand types during function execution scenarios.

(assert_invalid
  (module
    (func (param i32) (result i32)
      nop
      (call $typeCheck (i32.const 42))
      nop
    )
    (func $typeCheck (param i32) (result i32)
      (get_local 0)
    )
  )
  "type mismatch"
)